add header and servises section

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Statrix</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
@@ -15,15 +16,185 @@
 <body>
   <header class="header">
     <div class="container">
+      <div class="header__inner">
+        <a href="#" class="logo">
+          <img src="images/logo.svg" alt="#">
+        </a>
 
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item"><a href="#" class="menu__lsit-link">
+
+              </a></li>
+            <li class="menu__item"><a href="#" class="menu__lsit-link">
+                Внутренняя аналитика
+              </a></li>
+            <li class="menu__item"><a href="#" class="menu__lsit-link menu__lsit-link--soon">
+                Конкурентный анализ
+              </a></li>
+            <li class="menu__item"><a href="#" class="menu__lsit-link">
+                Тарифы
+              </a></li>
+            <li class="menu__item"><a href="#" class="menu__lsit-link">
+                Доп.услуги
+              </a></li>
+            <li class="menu__item"><a href="#" class="menu__lsit-link">
+                О компании
+              </a></li>
+            <li class="menu__item"><a href="#" class="menu__lsit-link">
+                Блог
+              </a></li>
+          </ul>
+        </nav>
+        <div class="btn-header btn">
+          <a href="#">Войти</a>
+        </div>
+
+        <div id="menu-btn" class="fas fa-bars"></div>
+
+      </div>
     </div>
   </header>
+  <section class="start">
+    <div class="container">
+      <div class="start__inner">
+        <div class="start__info">
+          <h3 class="start__info-title">
+            Повышайте продажи с помощью аналитики Wildberries
+          </h3>
+          <p class="start__info-text">
+            Самая глубокая и точная внутренняя аналитика и конкурентный анализ на Wildberries
+          </p>
+          <div class="start__links">
+            <a href="#" class="start__link start__link-play">Узнать больше</a>
+            <a href="#" class="start__link start__link-treal ">Попробовать 7 дней бесплатно</a>
+            <a href="#" class="start__link start__link-demo">Запросить демо-режим</a>
+          </div>
+        </div>
+        <div class="start-images">
+          <img src="images/start-bg.png" alt="start" class="start-img">
+        </div>
+      </div>
 
+      <div class="start__box">
+        <div class="start__box-item">
+          <div class="start__box-images">
+            <img src="images/Revenue-icon.svg" alt="#" class="start__box-item-img">
+          </div>
 
+          <h5 class="start__box-item-title">+ 20%</h5>
+          <p class="start__box-item-text">Средний рост выручки пользователей StatriX</p>
+        </div>
+        <div class="start__box-item">
+          <div class="start__box-images">
+            <img src="images/Time icon.svg" alt="#" class="start__box-item-img">
+          </div>
 
-  <main>
+          <h5 class="start__box-item-title">400</h5>
+          <p class="start__box-item-text">Сэкономленных часов на аналитику за год среди пользователей StatriX</p>
+        </div>
+        <div class="start__box-item">
+          <div class="start__box-images">
+            <img src="images/Brand icon.svg" alt="#" class="start__box-item-img">
+          </div>
 
-  </main>
+          <h5 class="start__box-item-title">500+</h5>
+          <p class="start__box-item-text">Брендов уже зарегистрировались на платформе StatriX</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <section class="servises">
+    <div class="container">
+      <div class="title__all">
+        <h2>Сервис аналитики Wildberries</h2>
+      </div>
+      <div class="servises__inner">
+        <div class="servises__box">
+          <img src="images/servises/Main-screenshot.png" alt="#" class="servises__images">
+          <div class="servises__info">
+            <h3 class="servises__info-title">Внутренняя аналитика</h3>
+            <p class="servises__info-text">Быстрее и качественнее принимайте бизнес-решения с помощью аналитики
+              вайлдберриз</p>
+            <ul class="servises__info-list">
+              <li class="servises__info-item">Планируйте объёмы и точные сроки поставок на склады для поддержания
+                необходимого уровня запасов и увеличения выручки</li>
+              <li class="servises__info-item">Формируйте оптимальный ассортимент исходя из множества критериев и
+                ABC-анализа</li>
+              <li class="servises__info-item">Выбирайте склады поставок с наибольшим спросом для увеличения объема
+                продаж и заказов</li>
+              <li class="servises__info-item">Определяйте оптимальную цену артикулов и скидочную политику для увеличения
+                продаж и заказов</li>
+              <li class="servises__info-item">Контролируйте продажи, заказы, остатки, процент выкупа, возвраты, прибыль,
+                затраты на логистику и хранение и другие
+                индикаторы бизнеса</li>
+            </ul>
+
+            <div class="servises__buttons">
+              <a href="#" class="servises__info-btn link-treal">Попробовать 7 дней бесплатно</a>
+              <a href="#" class="servises__info-btn">Узнать больше</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="servises__box servises__box-right">
+          <img src="images/servises/main-2.svg" alt="#" class="servises__images">
+          <div class="servises__info">
+            <h3 class="servises__info-title">Внутренняя аналитика</h3>
+            <p class="servises__info-text">Быстрее и качественнее принимайте бизнес-решения с помощью аналитики
+              вайлдберриз</p>
+            <ul class="servises__info-list">
+              <li class="servises__info-item">Планируйте объёмы и точные сроки поставок на склады для поддержания
+                необходимого уровня запасов и увеличения выручки</li>
+              <li class="servises__info-item">Формируйте оптимальный ассортимент исходя из множества критериев и
+                ABC-анализа</li>
+              <li class="servises__info-item">Выбирайте склады поставок с наибольшим спросом для увеличения объема
+                продаж и заказов</li>
+              <li class="servises__info-item">Определяйте оптимальную цену артикулов и скидочную политику для увеличения
+                продаж и заказов</li>
+              <li class="servises__info-item">Контролируйте продажи, заказы, остатки, процент выкупа, возвраты, прибыль,
+                затраты на логистику и хранение и другие
+                индикаторы бизнеса</li>
+            </ul>
+
+            <div class="servises__buttons">
+              <a href="#" class="servises__info-btn link-treal">Попробовать 7 дней бесплатно</a>
+              <a href="#" class="servises__info-btn">Узнать больше</a>
+            </div>
+          </div>
+        </div>
+        <div class="servises__box">
+          <img src="images/servises/main-3.svg" alt="#" class="servises__images">
+          <div class="servises__info">
+            <h3 class="servises__info-title">Внутренняя аналитика</h3>
+            <p class="servises__info-text">Быстрее и качественнее принимайте бизнес-решения с помощью аналитики
+              вайлдберриз</p>
+            <ul class="servises__info-list">
+              <li class="servises__info-item">Планируйте объёмы и точные сроки поставок на склады для поддержания
+                необходимого уровня запасов и увеличения выручки</li>
+              <li class="servises__info-item">Формируйте оптимальный ассортимент исходя из множества критериев и
+                ABC-анализа</li>
+              <li class="servises__info-item">Выбирайте склады поставок с наибольшим спросом для увеличения объема
+                продаж и заказов</li>
+              <li class="servises__info-item">Определяйте оптимальную цену артикулов и скидочную политику для увеличения
+                продаж и заказов</li>
+              <li class="servises__info-item">Контролируйте продажи, заказы, остатки, процент выкупа, возвраты, прибыль,
+                затраты на логистику и хранение и другие
+                индикаторы бизнеса</li>
+            </ul>
+
+            <div class="servises__buttons">
+              <a href="#" class="servises__info-btn link-treal">Попробовать 7 дней бесплатно</a>
+              <a href="#" class="servises__info-btn">Узнать больше</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  2
 
   <script src="js/main.min.js"></script>
 </body>
