--- a/app/index.html
+++ b/app/index.html
@@ -194,7 +194,351 @@
       </div>
     </div>
   </section>
-  2
+
+
+  <section class="slider">
+    <div class="container">
+      <div class="title__all">
+        <h2>Наши пользователи о нас</h2>
+      </div>
+      <div class="slider__inner">
+        <div class="slider__box">
+          <div class="slider__box-avatar">
+            <img class="slider__box-img" src="images/slider/avatar.jpg" alt="#">
+          </div>
+          <div class="slider__box-info">
+            <p class="slider__box-text">Хочу поблагодарить команду Statrix за прекрасный сервис аналитики! Благодаря
+              платформе, я могу отслеживать, какие
+              регионы заказывают товар и через какой период времени он будут выкуплен! Это прям пушка (для меня точно)!
+              Statrix также позволяет мониторить отмены, возвраты товаров, следить за остатками и прогнозировать
+              необходимое
+              количество поставок товаров на склады.
+              Спасибо Вам за сервис !</p>
+            <h6 class="slider__box-name">Юлия</h6>
+            <a class="slider__box-link" href="#">Категория “Посуда и инвентарь”</a>
+          </div>
+        </div>
+
+        <div class="slider__box">
+          <div class="slider__box-avatar">
+            <img class="slider__box-img" src="images/slider/avatar.jpg" alt="#">
+          </div>
+          <div class="slider__box-info">
+            <p class="slider__box-text">Хочу поблагодарить команду Statrix за прекрасный сервис аналитики! Благодаря
+              платформе, я могу отслеживать, какие
+              регионы заказывают товар и через какой период времени он будут выкуплен! Это прям пушка (для меня точно)!
+              Statrix также позволяет мониторить отмены, возвраты товаров, следить за остатками и прогнозировать
+              необходимое
+              количество поставок товаров на склады.
+              Спасибо Вам за сервис !</p>
+            <h6 class="slider__box-name">Юлия</h6>
+            <a class="slider__box-link" href="#">Категория “Посуда и инвентарь”</a>
+          </div>
+        </div>
+
+        <div class="slider__box">
+          <div class="slider__box-avatar">
+            <img class="slider__box-img" src="images/slider/avatar.jpg" alt="#">
+          </div>
+          <div class="slider__box-info">
+            <p class="slider__box-text">Хочу поблагодарить команду Statrix за прекрасный сервис аналитики! Благодаря
+              платформе, я могу отслеживать, какие
+              регионы заказывают товар и через какой период времени он будут выкуплен! Это прям пушка (для меня точно)!
+              Statrix также позволяет мониторить отмены, возвраты товаров, следить за остатками и прогнозировать
+              необходимое
+              количество поставок товаров на склады.
+              Спасибо Вам за сервис !</p>
+            <h6 class="slider__box-name">Юлия</h6>
+            <a class="slider__box-link" href="#">Категория “Посуда и инвентарь”</a>
+          </div>
+        </div>
+        <div class="slider__box">
+          <div class="slider__box-avatar">
+            <img class="slider__box-img" src="images/slider/avatar.jpg" alt="#">
+          </div>
+          <div class="slider__box-info">
+            <p class="slider__box-text">Хочу поблагодарить команду Statrix за прекрасный сервис аналитики! Благодаря
+              платформе, я могу отслеживать, какие
+              регионы заказывают товар и через какой период времени он будут выкуплен! Это прям пушка (для меня точно)!
+              Statrix также позволяет мониторить отмены, возвраты товаров, следить за остатками и прогнозировать
+              необходимое
+              количество поставок товаров на склады.
+              Спасибо Вам за сервис !</p>
+            <h6 class="slider__box-name">Юлия</h6>
+            <a class="slider__box-link" href="#">Категория “Посуда и инвентарь”</a>
+          </div>
+        </div>
+        <div class="slider__box">
+          <div class="slider__box-avatar">
+            <img class="slider__box-img" src="images/slider/avatar.jpg" alt="#">
+          </div>
+          <div class="slider__box-info">
+            <p class="slider__box-text">Хочу поблагодарить команду Statrix за прекрасный сервис аналитики! Благодаря
+              платформе, я могу отслеживать, какие
+              регионы заказывают товар и через какой период времени он будут выкуплен! Это прям пушка (для меня точно)!
+              Statrix также позволяет мониторить отмены, возвраты товаров, следить за остатками и прогнозировать
+              необходимое
+              количество поставок товаров на склады.
+              Спасибо Вам за сервис !</p>
+            <h6 class="slider__box-name">Юлия</h6>
+            <a class="slider__box-link" href="#">Категория “Посуда и инвентарь”</a>
+          </div>
+        </div>
+        <div class="slider__box">
+          <div class="slider__box-avatar">
+            <img class="slider__box-img" src="images/slider/avatar.jpg" alt="#">
+          </div>
+          <div class="slider__box-info">
+            <p class="slider__box-text">Хочу поблагодарить команду Statrix за прекрасный сервис аналитики! Благодаря
+              платформе, я могу отслеживать, какие
+              регионы заказывают товар и через какой период времени он будут выкуплен! Это прям пушка (для меня точно)!
+              Statrix также позволяет мониторить отмены, возвраты товаров, следить за остатками и прогнозировать
+              необходимое
+              количество поставок товаров на склады.
+              Спасибо Вам за сервис !</p>
+            <h6 class="slider__box-name">Юлия</h6>
+            <a class="slider__box-link" href="#">Категория “Посуда и инвентарь”</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="price">
+    <div class="container">
+      <div class="title__all">
+        <h2>Тарифы</h2>
+      </div>
+      <div class="price__inner">
+        <div class="price__info">
+          <div class="price__info-radio">
+            <p>Выберите продукт:</p>
+
+            <input type="checkbox" checked>
+            <label class="price__lable">Внутренняя аналитика</label>
+            <input type="checkbox">
+            <label class="input-soon">Конкурентный анализ</label>
+
+
+
+
+
+
+          </div>
+          <form class="price__info-form" action="">
+            <div class="price__info-formprofit">
+              <p>Предполагаемая выручка</p>
+              <p>350 000 ₽</p>
+            </div>
+          </form>
+          <p class="price__info-text-1">Предварительный расчёт</p>
+          <p class="price__info-text-2">У нас гибкое ценообразование: цена зависит от ежемесячной выручки. Учитывается
+            выручка после комиссии маркетплейса на
+            момент оплаты. Если в течение оплаченного периода она увеличивается, цена не меняется</p>
+          <a href="#" class="btn price__btn ">Попробовать 7 дней бесплатно</a>
+        </div>
+
+        <aside class="price__term">
+          <div class="price__term-item">
+            <h6 class="price__term-title">Месячный</h6>
+            <p class="price__term-text">1 990 ₽ (1 990 ₽/мес.)</p>
+          </div>
+          <div class="price__term-item">
+            <h6 class="price__term-title">Месячный</h6>
+            <p class="price__term-text">1 990 ₽ (1 990 ₽/мес.)</p>
+          </div>
+          <div class="price__term-item">
+            <h6 class="price__term-title">Месячный</h6>
+            <p class="price__term-text">1 990 ₽ (1 990 ₽/мес.)</p>
+          </div>
+        </aside>
+      </div>
+
+    </div>
+  </section>
+  <section class="more__info">
+    <div class="container">
+      <div class="title__all more__main-title">
+        <h2>Все еще думаете?<br>
+          Узнайте больше о сервисе ниже!</h2>
+        <img class="more__arrow-down" src="images/faq__arrow-down.svg" alt="#">
+      </div>
+    </div>
+  </section>
+
+  <section class="faq">
+    <div class="container">
+      <div class="title__all more__main-title">
+        <h2 class="faq__title">Часто задаваемые вопросы</h2>
+      </div>
+
+      <div class="aacordion-container">
+
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h4>Почему поставщики Wildberries выбирают нашу платформу для аналитики?</h4>
+            <img src="images/accordion-down.svg" alt="#">
+          </div>
+          <p class="accordion-content">
+            Во-первых, Statrix предоставляет наиболее полную базу необходимых отчетов. Во-вторых, уникальная система
+            рекомендаций и
+            полезных подарков: бесплатные часы наших аналитиков для Вас, многостраничные отчеты о Вашем бизнесе, система
+            уведомлений
+            и все это по разумной цене, как за пару кружкек кофе - такого на рынке не встретите.
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h4>Почему поставщики Wildberries выбирают нашу платформу для аналитики?</h4>
+            <img src="images/accordion-down.svg" alt="#">
+          </div>
+          <p class="accordion-content">
+            Во-первых, Statrix предоставляет наиболее полную базу необходимых отчетов. Во-вторых, уникальная система
+            рекомендаций и
+            полезных подарков: бесплатные часы наших аналитиков для Вас, многостраничные отчеты о Вашем бизнесе, система
+            уведомлений
+            и все это по разумной цене, как за пару кружкек кофе - такого на рынке не встретите.
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h4>Почему поставщики Wildberries выбирают нашу платформу для аналитики?</h4>
+            <img src="images/accordion-down.svg" alt="#">
+          </div>
+          <p class="accordion-content">
+            Во-первых, Statrix предоставляет наиболее полную базу необходимых отчетов. Во-вторых, уникальная система
+            рекомендаций и
+            полезных подарков: бесплатные часы наших аналитиков для Вас, многостраничные отчеты о Вашем бизнесе, система
+            уведомлений
+            и все это по разумной цене, как за пару кружкек кофе - такого на рынке не встретите.
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h4>Почему поставщики Wildberries выбирают нашу платформу для аналитики?</h4>
+            <img src="images/accordion-down.svg" alt="#">
+          </div>
+          <p class="accordion-content">
+            Во-первых, Statrix предоставляет наиболее полную базу необходимых отчетов. Во-вторых, уникальная система
+            рекомендаций и
+            полезных подарков: бесплатные часы наших аналитиков для Вас, многостраничные отчеты о Вашем бизнесе, система
+            уведомлений
+            и все это по разумной цене, как за пару кружкек кофе - такого на рынке не встретите.
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h4>Почему поставщики Wildberries выбирают нашу платформу для аналитики?</h4>
+            <img src="images/accordion-down.svg" alt="#">
+          </div>
+          <p class="accordion-content">
+            Во-первых, Statrix предоставляет наиболее полную базу необходимых отчетов. Во-вторых, уникальная система
+            рекомендаций и
+            полезных подарков: бесплатные часы наших аналитиков для Вас, многостраничные отчеты о Вашем бизнесе, система
+            уведомлений
+            и все это по разумной цене, как за пару кружкек кофе - такого на рынке не встретите.
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h4>Почему поставщики Wildberries выбирают нашу платформу для аналитики?</h4>
+            <img src="images/accordion-down.svg" alt="#">
+          </div>
+          <p class="accordion-content">
+            Во-первых, Statrix предоставляет наиболее полную базу необходимых отчетов. Во-вторых, уникальная система
+            рекомендаций и
+            полезных подарков: бесплатные часы наших аналитиков для Вас, многостраничные отчеты о Вашем бизнесе, система
+            уведомлений
+            и все это по разумной цене, как за пару кружкек кофе - такого на рынке не встретите.
+          </p>
+        </div>
+
+
+      </div>
+
+    </div>
+  </section>
+  <section class="treal">
+    <div class="container">
+      <div class="title__all title__treal">
+        <h2>Нам доверяют уже более 500 брендов</h2>
+      </div>
+      <div class="treal__btn">
+        <a class="btn price__btn" href="#">Попробовать 7 дней бесплатно</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <div class="footer__social">
+          <p class="footer__social-text">Оствайтесь в курсе наших новостей</p>
+          <a class="footer__social-link" href="#"><img src="images/instagram.svg" alt="#"
+              class="footer__social-img"></a>
+          <a class="footer__social-link" href="#"><img src="images/youtube.svg" alt="#" class="footer__social-img"></a>
+          <a class="footer__social-link" href="#"><img src="images/telegram.svg" alt="#" class="footer__social-img"></a>
+        </div>
+        <div class="footer__content">
+          <div class="footer__content-left">
+            <div class="footer__content-logo">
+              <a href="#" class="logo">
+                <img src="images/logo.svg" alt="#">
+              </a>
+            </div>
+            <div class="footer__content-tel">
+              <a href="tel:79686701254">+7 968 670 12 54
+
+              </a>
+            </div>
+            <div class="footer__content-email">
+              <a href="email:statrix-manager@gmail.com">statrix-manager@gmail.com</a>
+            </div>
+            <div class="footer__content-instagram">
+              <a href="#">@statrix</a>
+            </div>
+          </div>
+          <div class="footer__content-right">
+            <div class="footer__content-items">
+              <h6 class="footer__content-items-title">Главная</h6>
+              <a href="#" class="footer__content-item">Блог</a>
+            </div>
+            <div class="footer__content-items">
+              <h6 class="footer__content-items-title">Наши продукты</h6>
+              <a href="#" class="footer__content-item">Внутренняя аналитика</a>
+              <a href="#" class="footer__content-item">Конкурентный анализ</a>
+            </div>
+            <div class="footer__content-items">
+              <h6 class="footer__content-items-title">Доп. услуги</h6>
+              <a href="#" class="footer__content-item">Консалтинг</a>
+              <a href="#" class="footer__content-item">SEO оптимизация</a>
+            </div>
+            <div class="footer__content-items">
+              <h6 class="footer__content-items-title">О компании</h6>
+              <a href="#" class="footer__content-item">О нас</a>
+              <a href="#" class="footer__content-item">Контакты</a>
+            </div>
+          </div>
+
+        </div>
+        <div class="footer__copy">
+          <div class="footer__copy-left">
+            ©2021 StatriX. Аналитика и статистика продаж. Все права защищены.
+          </div>
+          <div class="footer__copy-right">
+            <a class="footer__copy-link" href="#">Договор-оферта</a>
+            <a class="footer__copy-link" href="#">Политика конфиденциальности</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 
   <script src="js/main.min.js"></script>
 </body>
