adaptive done. html/css/js/adaptive done

--- a/app/index.html
+++ b/app/index.html
@@ -303,6 +303,7 @@
       </div>
     </div>
   </section>
+
   <section class="price">
     <div class="container">
       <div class="title__all">
@@ -312,11 +313,14 @@
         <div class="price__info">
           <div class="price__info-radio">
             <p>Выберите продукт:</p>
+            <div><input type="checkbox" checked>
+              <label class="price__lable">Внутренняя аналитика</label>
+            </div>
 
-            <input type="checkbox" checked>
-            <label class="price__lable">Внутренняя аналитика</label>
-            <input type="checkbox">
-            <label class="input-soon">Конкурентный анализ</label>
+            <div><input type="checkbox">
+              <label class="input-soon">Конкурентный анализ</label>
+            </div>
+
 
 
 
@@ -355,6 +359,7 @@
 
     </div>
   </section>
+
   <section class="more__info">
     <div class="container">
       <div class="title__all more__main-title">
@@ -462,6 +467,7 @@
       </div>
 
     </div>
+
   </section>
   <section class="treal">
     <div class="container">
